objects/SIC__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICFormula__c</fullName>
        <formula>SIC_Code__c +&apos; &apos; +   Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SICFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>SIC</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Industry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SICs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>